<resources>
    <string name="app_name">ProyectoRestaurantes</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_Ajustes">Ajustes</string>
    <string name="menu_principal">Pagina principal</string>
    <string name="menu_Favoritos">Favoritos</string>
    <string name="menu_holaMundo">Hola Mundo</string>

    <string name="tvFecha" type="id">Fecha</string>
    <string name="tvCorreoUsuario" type="id">Correo</string>
    <string name="ratingBarOpinion" type="id">Puntuacion</string>
    <string name="tvComentario" type="id">Comentario</string>


</resources>