<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@mipmap/principal"
            android:title="@string/menu_principal" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@mipmap/perfil"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_favoritos"
            android:icon="@android:drawable/btn_star_big_off"
            android:title="@string/menu_Favoritos" />

    </group>
</menu>