<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_perfil">

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.android.proyectorestaurantes.ui.home.HomeFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.android.proyectorestaurantes.ui.gallery.GalleryFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ajustes"
        android:name="com.android.proyectorestaurantes.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_Ajustes"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_principal"
        android:name="com.android.proyectorestaurantes.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
</navigation>